# gourami

./: .gitignore  CHANGELOG  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  PHILOSOPHY.md  README.md  TODO  auth.rs  sample_env  session.rs
.github/workflows/: release.yml  rust.yml
ansible/: deploy.sh  gourami.service  inventory.example  playbook.retry  playbook.yml
docs/: ADMIN_GUIDE.md  USER_GUIDE.md
hack/: announce.sql
migrations/2020-04-13-014917_initialize/: down.sql  up.sql
migrations/2020-04-26-181415_new/: up.sql
migrations/2020-04-28-222918_neighborhood/: up.sql
migrations/2020-04-29-162311_ap-restructure/: up.sql
migrations/2020-05-02-001130_remoteuser/: up.sql
migrations/2020-05-08-203656_showemail/: up.sql
migrations/2020-06-05-211246_add_wesbite/: up.sql
src/: ap.rs  error.rs  lib.rs  main.rs  routes.rs  rss.rs  schema.rs  session.rs
src/db/: conn.rs  invite.rs  mod.rs  note.rs  notification.rs  schema.rs  server_mutuals.rs  status.rs  user.rs
static/css/: style.css
templates/: base.html  createnote.html  edit_user.html  error.html  head.html  index.html  login.html  note.html  noteslist.html  notifications.html  register.html  server_info.html  single_note.html  timeline.html  user.html  user_header.html
