[package]
name = "gourami_social"
version = "0.1.0"
authors = ["alex wennerberg <alex@alexwennerberg.com>"]
edition = "2018"

[dependencies]
askama = "0.9.0"
bcrypt = "0.7.0"
cookie = "0.13.3"
clap = "2.33.0"
chrono = "0.4.11"
diesel = { version = "1.4.4", features = ["sqlite", "r2d2"] }
env_logger = "0.7.1"
http-signature-normalization = "0.5.1"
lazy_static = "1.4.0"
log = "0.4.8"
rand = "0.7.3"
reqwest = {version="0.10.4",features=["json", "blocking"]}
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.51"
tokio = { version = "0.2.18", features = ["macros"] }
warp = {git = "https://github.com/seanmonstar/warp.git", rev = "497505a5", features = ["tls"]}
hyper = "0.13.5"
regex = "1.3.7"
ammonia = "3.1.0"
maplit = "1.0.2"
zxcvbn = "2.0.1"

[dev-dependencies]
