[package]
name = "gourami_social"
version = "0.1.0"
authors = ["alex wennerberg <alex@alexwennerberg.com>"]
edition = "2018"

[dependencies]
activitystreams = "0.6.0"
ammonia = "3.1.0"
askama = "0.8.0"
base64 = "0.12.1"
bcrypt = "0.7.0"
chrono = "0.4.11"
clap = "2.33.0"
diesel = { version = "1.4.4", features = ["sqlite", "r2d2"] }
dotenv = "0.15.0"
env_logger = "0.7.1"
http-signature-normalization = "0.5.1"
hyper = "0.13.5"
lazy_static = "1.4.0"
log = "0.4.8"
maplit = "1.0.2"
openssl = "0.10.29"
r2d2 = "0.8.8"
rand = "0.7.3"
regex = "1.3.7"
ring = "0.16.13"
reqwest = {version="0.10.4",features=["json", "blocking"]}
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.52"
tokio = { version = "0.2.18", features = ["macros"] }
warp = {git = "https://github.com/seanmonstar/warp.git", rev = "497505a5", features = ["tls"]}
zxcvbn = "2.0.1"

[dev-dependencies]
