[package]
name = "gourami"
version = "0.1.9"
authors = ["alex wennerberg <alex@alexwennerberg.com>"]
edition = "2018"

[dependencies]
ammonia = "3.1.0"
askama = "0.8.0"
base64 = "0.12.2"
bcrypt = "0.8.0"
chrono = { version = "0.4.11", features = ["serde"] }
clap = "2.33.1"
diesel = { version = "1.4.5", features = ["sqlite", "chrono", "r2d2"] }
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
env_logger = "0.7.1"
http-signature-normalization = "0.5.1"
hyper = "0.13.6"
lazy_static = "1.4.0"
log = "0.4.8"
maplit = "1.0.2"
openssl = "0.10.29"
r2d2 = "0.8.8"
rand = "0.7.3"
regex = "1.3.9"
ring = "0.16.14"
reqwest = { version = "0.10.6", features = ["json"] }
serde = { version = "1.0.112", features = ["derive"] }
serde_json = "1.0.55"
serde_urlencoded = "0.6.1"
tokio = { version = "0.2.21", features = ["macros", "time", "sync"] }
url = "2.1.1"
uuid = { version = "0.8.1", features = ["v4"] }
warp = { version = "0.2.3", features = ["tls"] }


[features]
vendored-openssl = ['openssl/vendored']
